update fix: prevented layout shift

--- a/public/style.css
+++ b/public/style.css
@@ -37,7 +37,7 @@ body {
     
 }
  .main-container {
-   margin-bottom: 150px;
+   margin-bottom: 100px;
  }
 .header {
   display: flex;
